# data-transformation

./: API_MULTI_TABLE_QUERIES.md  BACKEND.md  DATABASE_SCHEMA.md  FRONTEND_TABLE_VIEWS.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MULTI_TABLE_CONNECTION_GUIDE.md  MULTI_TABLE_SYSTEM_COMPLETE.md  PAGES_WORKING_AND_SCORING.md  QUICK_REFERENCE.md  README.md  TABLE_FILTERING_AND_LOAD_FEATURE.md  UI_VISUAL_DEMO.md  USER_GUIDE.md  WEBSITE_TERMS_PRESENTATION.md  claude_plan.md  db_utils.py  decision_engine.py  dedup_engine.py  docker-compose.yml  golden_merger.py  init_db.sql  kafka_consumer.py  kafka_producer.py  pyproject.toml  query_db.py  silver_transformer.py  start_backend.sh  ui.md
frontend/: .env  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useLiveFeed.ts  useSSE.ts
frontend/src/pages/: CanonicalExplorer.tsx  CommandCenter.tsx  DataLineage.tsx  IdentityGraph.tsx  MasterRecords.tsx  MatchIntelligence.tsx  Overview.tsx  Pipeline.tsx  PipelineOrchestration.tsx  QualityProgression.tsx  RawVaultExplorer.tsx  Records.tsx  ReviewQueue.tsx  ReviewWorkbench.tsx  (+1 more)
golden_record_platform/: __init__.py  config.py
golden_record_platform/api/: __init__.py  main.py
golden_record_platform/pipeline/: __init__.py  consumer.py  decision.py  dedup.py  gold_rebuilder.py  live_ingestor.py  match_scheduler.py  merger.py  orchestrator.py  producer.py  silver.py
golden_record_platform/utils/: __init__.py  ai_prompts.py  azure_openai.py  realtime.py  score_utils.py
(+23 files in other folders)
